# Typed

./: .clang-format  .gitignore  Build.bat  Build.sh  CMakeLists.txt  Cargo.toml  LICENSE  Main.cpp  README.md  ReadMe.md  StyleGuide.md  alire.toml  typed.gpr
App/: EntryPoint.cpp
BlackMagic/Template/: Generated.h
Cmake/: IncludeDirs.cmake  Libs.cmake  Link.cmake  Source.cmake
Contributing/: StyleGuide.md
Core/Lexer/: Handler.h  Map.h  Token.h
Core/Parser/: Ast.h  Parser.cpp  Parser.h
Entry/: Main.cpp
Environment/: Env.cpp  Env.h  Read.cpp  Read.h
Environment/Lexer/: Except.h  FlushToken.h  Handler.h  Lexer.cpp  Lexer.h  Map.h  State.h  Token.h
Environment/Util/: Expect.h  FlushToken.h  IsIdentifier.h  IsWhitespace.h
Example/: Env.zv  Test.typed  Test.zt  Test2.typed
Runtime/Engine/: Run.cpp  Run.h
Runtime/Symbol/: Unit.h
Runtime/Unit/: Get.cpp  Get.h
Shared/: AgnosticException.h  Expect.h  FlushToken.h  IsIdentifier.h  IsWhitespace.h  LexerState.h  TokenMap.h  TokenStream.h  Trace.h
Shared/Character/: IsIdentifier.h  IsWhitespace.h
Shared/Except/: Agnostic.h
Shared/Lexer/: AgnosticHandler.h  FlushToken.h  Lexer.cpp  Lexer.h  State.h  TokenMap.h
Shared/Map/: Map.h
Shared/Stream/: Expect.h  TokenStream.h
Test/: Lexer.cpp  Parser.cpp
example/: Test.typed
grammar/: grammar.pest
src/: ansi.ads  cli-core.adb  cli-core.ads  cli-exceptions.ads  cli-reporter.adb  cli-reporter.ads  cli.ads  lang-map.ads  lang.ads  main.rs  support-string.ads  terminal.adb  terminal.ads  typed.adb  wide_terminal.adb  wide_terminal.ads
src/adt/: hash.rs  (+8 more)
(+456 files in other folders)
